Added unit tests for CI